--- a/book.bib
+++ b/book.bib
@@ -537,19 +537,36 @@ title = {A Unified Approach to Interpreting Model Predictions}
 }
 
 
+@online {shap_dependence_plot_explained,
+	author={Scott Lundberg},
+	title={Interpretable Machine Learning with XGBoost},
+	url={https://towardsdatascience.com/interpretable-machine-learning-with-xgboost-9ec80d148d27},
+	year={2018},
+	urldate={03/06/2020}
 
-
-
+}
 
 @online{4groups_chart,
 title={Pylift: A Fast Python Package for Uplift Modeling},
 author={Robert Yi and Will Frost},
 url={https://tech.wayfair.com/data-science/2018/10/pylift-a-fast-python-package-for-uplift-modeling/},
+year={2018},
 urldate={15/04/2020}
 }
 
 
 ####NOWE
+@article{pdp,
+author = {Friedman, Jerome},
+year = {2000},
+month = {11},
+pages = {},
+title = {Greedy Function Approximation: A Gradient Boosting Machine},
+volume = {29},
+journal = {The Annals of Statistics},
+doi = {10.1214/aos/1013203451}
+}
+
 @article{shap_dependence_plot,
   author    = {Scott M. Lundberg and
                Gabriel G. Erion and
@@ -581,19 +598,6 @@ urldate={15/04/2020}
 	urldate={15/04/2020}
 }
 
-@article{pdp,
- ISSN = {00905364},
- URL = {http://www.jstor.org/stable/2699986},
- abstract = {Function estimation/approximation is viewed from the perspective of numerical optimization in function space, rather than parameter space. A connection is made between stagewise additive expansions and steepest-descent minimization. A general gradient descent "boosting" paradigm is developed for additive expansions based on any fitting criterion. Specific algorithms are presented for least-squares, least absolute deviation, and Huber-M loss functions for regression, and multiclass logistic likelihood for classification. Special enhancements are derived for the particular case where the individual additive components are regression trees, and tools for interpreting such "TreeBoost" models are presented. Gradient boosting of regression trees produces competitive, highly robust, interpretable procedures for both regression and classification, especially appropriate for mining less than clean data. Connections between this approach and the boosting methods of Freund and Shapire and Friedman, Hastie and Tibshirani are discussed.},
- author = {Jerome H. Friedman},
- journal = {The Annals of Statistics},
- number = {5},
- pages = {1189--1232},
- publisher = {Institute of Mathematical Statistics},
- title = {Greedy Function Approximation: A Gradient Boosting Machine},
- volume = {29},
- year = {2001}
-}
 
 
 
